# Hetman

./: .gitignore  Dockerfile  README.md  alembic.ini  example_config.toml  example_secret.toml  pyproject.toml  sample-compose.yaml
.github/workflows/: docker-image.yml
alembic/: env.py
alembic/versions/2026/06/: 12_1651_55_baseline_init_baseline.py  12_1653_15_5e01b22ec412_change_floats_to_bigint.py  13_0335_13_2f2b1a37829f_introduce_snapshot_billing.py
hetman/: __init__.py  __main__.py  bot.py
hetman/cogs/: __init__.py  errors.py  override.py  servman.py
hetman/data/: config.py  const.py  models.py
hetman/ext/: checks.py  exceptions.py  views.py
