[tool.poetry]
name = "Hetman"
version = "0.0.2"
description = "On-demand Hetzner server management via discord bot."
authors = ["Tech. TTGames <50541739+Tech-TTGames@users.noreply.github.com>"]
license = "EPL-2.0"
readme = "README.md"
repository = "https://github.com/Tech-TTGames/Hetman"
packages = [
    {include = "hetman"}
]

[tool.poetry.dependencies]
python = "^3.14"
"discord.py" = "^2.2.3"
tomli = "^2.0.1"
hcloud = "^2.20.0"
cloudflare = {extras = ["aiohttp"], version = "^5.2.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.50"}
aiosqlite = "^0.22.1"
python-a2s = "^1.4.1"
colorama = "^0.4.6"

[tool.poetry.group.dev.dependencies]
isort = "^8.0.1"
yapf = "^0.43.0"
pylint = "^4.0.4"

[tool.yapf]
based_on_style = "google"
column_limit = 120

[tool.isort]
profile = "google"
lines_between_types = 1

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
